force-app/main/default/objects/Loop__LoopSettings__c/Loop__LoopSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>LOOP Settings</label>
</CustomObject>