force-app/main/default/objects/Loop__LoopSettings__c/fields/Loop__Pause_to_Edit_Type__c.field-meta.xml
<CustomField>
    <fullName>Loop__Pause_to_Edit_Type__c</fullName>
    <description>Valid options are &quot;Upload&quot; and &quot;Salesforce Files Sync&quot;. (Do not include the quotes.)</description>
    <inlineHelpText>Valid options are &quot;Upload&quot; and &quot;Salesforce Files Sync&quot;. (Do not include the quotes.)</inlineHelpText>
    <label>Pause to Edit Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>