force-app/main/default/objects/Loop__LoopSettings__c/fields/Loop__Show_DDP_Wizard_Message__c.field-meta.xml
<CustomField>
    <fullName>Loop__Show_DDP_Wizard_Message__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show DDP Wizard Message</label>
    <type>Checkbox</type>
</CustomField>